--- a/dermit/package.json
+++ b/dermit/package.json
@@ -10,8 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@nextui-org/react": "^2.4.0",
     "axios": "^1.6.8",
     "formik": "^2.4.6",
+    "framer-motion": "^11.2.6",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hotkeys-hook": "^4.5.0",
@@ -20,7 +23,8 @@
     "react-router": "^6.23.0",
     "react-router-dom": "^6.23.0",
     "react-toastify": "^10.0.5",
-    "react-use-websocket": "^4.8.1"
+    "react-use-websocket": "^4.8.1",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
