--- a/dermit/package.json
+++ b/dermit/package.json
@@ -24,6 +24,7 @@
     "react-router-dom": "^6.23.0",
     "react-toastify": "^10.0.5",
     "react-use-websocket": "^4.8.1",
+    "swiper": "^11.1.4",
     "yup": "^1.4.0"
   },
   "devDependencies": {
